fixed bug with repeat events and adjusted spacing of room page

--- a/client/src/components/Aside/aside.css
+++ b/client/src/components/Aside/aside.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Freckle+Face&family=Jolly+Lodger&family=Press+Start+2P&family=VT323&display=swap');
+
 .sidebar {
     background-color: black;
     padding: 48px 20px 0 0;
@@ -5,7 +7,8 @@
     max-width: 20vw;
     overflow: auto;
     height: 80vh;
-    border-right: white solid 2px
+    border-right: white solid 2px;
+    font-family: 'Creepster', cursive !important; 
 }
 
 li {
